retrieveUnpackaged/objects/Award_Reporting__c.object
<CustomObject>
    <fields>
        <fullName>Able_to_enroll_due_to_age_set_to_55__c</fullName>
        <label>Able to enroll due to age set to 55</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Able_to_enroll_due_to_income_eligibility__c</fullName>
        <label>Able to enroll due to income eligibility</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abused_Neglected_Children_IN__c</fullName>
        <label>Abused/Neglected Children(IN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abused_Neglected_Children_NIH__c</fullName>
        <label>Abused/Neglected Children(NIH)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abused_Neglected_Children_V__c</fullName>
        <label>Abused/Neglected Children (V)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acceptable_Thresholds__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box if automated thresholds are acceptable</inlineHelpText>
        <label>Acceptable Thresholds?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Action_Reports__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Reports</label>
        <referenceTo>Action_Reports__c</referenceTo>
        <relationshipLabel>Award Reporting</relationshipLabel>
        <relationshipName>Award_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Mil_fam_mbrs_assistance_received__c</fullName>
        <label>Active Mil. fam mbrs assistance received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjudicated_Youth_Juvenile_Offenders_IN__c</fullName>
        <label>Adjudicated Youth/Juvenile Offenders(IN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjudicated_Youth_Juvenile_Offenders_NIH__c</fullName>
        <label>AdjudicatedYouth/Juvenile Offenders(NIH)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjudicated_Youth_Juvenile_Offenders_V__c</fullName>
        <label>Adjudicated Youth /Juvenile Offenders(V)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_Group_55_to_59__c</fullName>
        <label># of Volunteers of Age Group : 55 to 59</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_Group_60_to_69__c</fullName>
        <label># of Volunteers of Age Group : 60 to 69</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_Group_70_to_79__c</fullName>
        <label># of Volunteers of Age Group : 70 to 79</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_Group_85_and_over__c</fullName>
        <label># of Volunteers Age Group : 85 and over</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ages_13_19__c</fullName>
        <label>Ages 13 - 19</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ages_20_44__c</fullName>
        <label>Ages 20- 44</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ages_45_64__c</fullName>
        <label>Ages 45 - 64</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ages_6_to_12__c</fullName>
        <label>Ages 6 to 12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ages_85_or_higher__c</fullName>
        <label># of Clients served ages 85 or higher</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>American_Indian_or_Alaskan_Native__c</fullName>
        <label>American Indian or Alaskan Native</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asian__c</fullName>
        <label>Asian</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Authorized_Representative__c</fullName>
        <label>Authorized Representative</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Authorized_by__c</fullName>
        <label>Authorized by</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award Name</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Award Reporting (Award Name)</relationshipLabel>
        <relationshipName>Award_Reporting1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Award Reporting</relationshipLabel>
        <relationshipName>Award_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Basis__c</fullName>
        <label>Basis</label>
        <picklist>
            <picklistValues>
                <fullName>Accural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Birth_to_age_5__c</fullName>
        <description>Clients Served Age Groups</description>
        <label>Birth to age 5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Black_or_African_American__c</fullName>
        <label>Black or African American</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <defaultValue>&quot;I certify to the best of my knowledge and belief that the report is true, complete, and accurate, and the expenditures, disbursements, and cash receipts are for the purposes and intent set forth in the award documents. I am aware that any false, fictitious, or fraudulent information may subject me to criminal, divil, or administrative penalties. (U.S. Code, Title 18, Section 1001)&quot;</defaultValue>
        <label>Certification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Children_with_HIV_AIDS_IN__c</fullName>
        <label>Children with HIV/AIDS(IN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Children_with_HIV_AIDS_NIH__c</fullName>
        <label>Children with HIV/AIDS(NIH)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Children_with_HIV_AIDS_V__c</fullName>
        <label>Children with HIV/AIDS(V)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Out_Certification_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close Out Certification Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Out_Certification__c</fullName>
        <defaultValue>&quot;I certify that our agency has completed all closeout actions; accomplished all program and financial requirements; secured all reports; and reconciled all funding with respect to sub grants we have awarded under the above-referenced grant.&quot;</defaultValue>
        <label>Close Out Certification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Community_volunteers_managed__c</fullName>
        <label># of Community volunteers managed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Community_volunteers_recruited__c</fullName>
        <label># of Community volunteers recruited</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Continuing_Beyond_the_Expiration_Date__c</fullName>
        <inlineHelpText>Note: Is this program continuing beyond the expiration date of this CNS grant? If Yes, specify below if the equipment will be used after the expiration of the grant.</inlineHelpText>
        <label>Continuing Beyond the Expiration Date?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Created_on__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_report_submitted__c</fullName>
        <label>Date report submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Developmental_Disabilities_IN__c</fullName>
        <label>Developmental Disabilities(IN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Developmental_Disabilities_NIH__c</fullName>
        <label>Developmental Disabilities(NIH)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Developmental_Disabilities_V__c</fullName>
        <label>Developmental Disabilities(V)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Developmentally_Disabled_Adult_IN__c</fullName>
        <label>Developmentally Disabled Adult(IN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Developmentally_Disabled_Adult_NIH__c</fullName>
        <label>Developmentally Disabled Adult(NIH)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Developmentally_Disabled_Adult_V__c</fullName>
        <label>Developmentally Disabled Adult(V)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Does_Not_Apply_to_Grant__c</fullName>
        <defaultValue>&quot;Does Not Apply to Grant: This report is not required since Equipment with a Current Fair Market Value of $5000.00 or more were not purchased with federal grants funds, as a part of this grant.&quot;</defaultValue>
        <label>Does Not Apply to Grant</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Does_Not_Apply_to_Grant_check__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This report is not required since Equipment with a Current Fair Market Value of $5000.00 or more were not purchased with federal grants funds, as a part of this grant.</inlineHelpText>
        <label>Does Not Apply to Grant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dollar_value_of_cash_resources_leveraged__c</fullName>
        <label>Dollar value of cash resources leveraged</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dollar_value_of_in_kind_resources_levera__c</fullName>
        <label>Dollar value of in-kind resources levera</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Drawdowns_within_20_of_reported_OBG__c</fullName>
        <inlineHelpText>At the time of review, draw downs are within 20% of reported obligations</inlineHelpText>
        <label>Drawdowns within 20% of reported OBG</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emotional_Disabilities_IN__c</fullName>
        <label>Emotional Disabilities(IN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emotional_Disabilities_NIH__c</fullName>
        <label>Emotional Disabilities(NIH)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emotional_Disabilities_V__c</fullName>
        <label>Emotional Disabilities(V)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employment_moved_family_new_interests__c</fullName>
        <label>Employment, moved, family, new interests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expenditures__c</fullName>
        <label>Expenditures</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extended_Due_Date__c</fullName>
        <label>Extended Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FedShareUnliquidatedObligation_Cumulativ__c</fullName>
        <label>FedShareUnliquidatedObligation-Cumulativ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FedShareUnliquidatedObligation_ThisPerio__c</fullName>
        <label>FedShareUnliquidatedObligation-ThisPerio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fed_Share_of_expenditures_This_Period__c</fullName>
        <label>Fed Share of expenditures-This Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Federal_Department_Name__c</fullName>
        <label>Federal Department Name</label>
        <picklist>
            <picklistValues>
                <fullName>Department of Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Homeland Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Interior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Justice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Department of State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Treasury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Veteran Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Protection Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Services Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Health and Human Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Housing and Urban Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Aeronautics and Space Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear Regulatory Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Science Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office of Personnel Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small business Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Security Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Agency for International Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All other agencies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Federal_Share_of_expenditures_Cumulative__c</fullName>
        <label>Federal Share of expenditures-Cumulative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Federal_Share_of_expenditures__c</fullName>
        <label>Federal Share of expenditures-Previous</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Federal_Share_of_unliquidated_obligation__c</fullName>
        <label>Fed Share of unliquidated obligation-Pre</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Female__c</fullName>
        <label># of Female Volunteers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GO_Email__c</fullName>
        <label>GO Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Grant_End_Date__c</fullName>
        <formula>Award__r.Grant_Performance_Period_End__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Number__c</fullName>
        <label>FAIN(FederalAward Identification Number)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Year__c</fullName>
        <label>Grant Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <formula>Award__r.Grant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FAIN(FederalAward Identification Number)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_problems_death__c</fullName>
        <label>Health problems, death</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hearing_Impaired_IN__c</fullName>
        <label>Hearing Impaired(IN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hearing_Impaired_NIH__c</fullName>
        <label>Hearing Impaired(NIH)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hearing_Impaired_V__c</fullName>
        <label>Hearing Impaired(V)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hispanic_or_Latino__c</fullName>
        <label>Hispanic or Latino</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Homeless_IN__c</fullName>
        <label>Homeless(IN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Homeless_NIH__c</fullName>
        <label>Homeless(NIH)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Homeless_V__c</fullName>
        <label>Homeless(V)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Served_0_5__c</fullName>
        <description># of Volunteers</description>
        <label>Hours Served 0 - 5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Served_16_25__c</fullName>
        <label>Hours Served 16-25</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Served_26_34__c</fullName>
        <label>Hours Served 26 - 34</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Served_41_or_more__c</fullName>
        <label>Hours Served 41 or more</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Sreved_11_15__c</fullName>
        <label>Hours Sreved 11 - 15</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_of_Community_volunteers_managed__c</fullName>
        <label>Hours of Community volunteers managed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_of_Community_volunteers_recruited__c</fullName>
        <label>Hours of Community volunteers recruited</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_of_Vets_military_fam_mbrs_providin__c</fullName>
        <inlineHelpText>Number of hours the veterans &amp; military family members were engaged in providing services</inlineHelpText>
        <label>Hours of Vets/military fam mbrs providin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_of__c</fullName>
        <inlineHelpText># of hours the staff &amp; volunteers were trained as a result of capacity-building scvs</inlineHelpText>
        <label>Hours of trained by capacity-building sc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_agree__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I agree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Income_became_over_allowable_guidelines__c</fullName>
        <label>Income became over allowable guidelines</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language_Barriers_IN__c</fullName>
        <label>Language Barriers(IN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language_Barriers_NIH__c</fullName>
        <label>Language Barriers(NIH)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language_Barriers_V__c</fullName>
        <label>Language Barriers(V)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Learning_Disabilities_IN__c</fullName>
        <label>Learning Disabilities(IN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Learning_Disabilities_NIH__c</fullName>
        <label>Learning Disabilities(NIH)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Learning_Disabilities_V__c</fullName>
        <label>Learning Disabilities(V)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male__c</fullName>
        <label>Male</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mil_service_members_assistance_received__c</fullName>
        <label>Mil. service members assistance received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Native_Hawaiian_or_Pacific_Island__c</fullName>
        <label>Native Hawaiian or Pacific Island</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Volunteers_recruited_by_Volunteer_Le__c</fullName>
        <label>New Volunteers recruited by Volunteer Le</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_system_biz_processes_enhancements__c</fullName>
        <label>New system &amp; biz processes/enhancements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Volunteers_recruited_by_Senior_Corps__c</fullName>
        <label>No. Volunteers recruited by Senior Corps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_volunteers_recruiting_community_v__c</fullName>
        <label>No. of volunteers recruiting community v</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Hispanic_or_Non_Latino__c</fullName>
        <label>Non-Hispanic or Non-Latino</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Volunteer_Leaders__c</fullName>
        <label>Number of Volunteer Leaders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_adult_ex_offenders_served__c</fullName>
        <label>Number of adult ex-offenders served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_caregivers_provided_with_respi__c</fullName>
        <label>Number of caregivers provided with respi</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_caregivers_receiving_respite__c</fullName>
        <label>Number of caregivers receiving respite</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_children_youth_awaiting_servic__c</fullName>
        <label>Number of children/youth awaiting servic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_seniors_receiving_independent__c</fullName>
        <label>Number of seniors receiving independent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_veterans_serving_as_volunteers__c</fullName>
        <label>Number of veterans serving as volunteers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <formula>Action_Reports__r.NOFA_ID__r.Organization__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orgs_experiencing_increase_in_requests__c</fullName>
        <label>Orgs experiencing increase in requests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orgs_receiving_capacity_building_svcs__c</fullName>
        <label>Orgs receiving capacity-building svcs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orgs_reporting_activities_making_org_mor__c</fullName>
        <label>Orgs reporting activities making org mor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orgs_that_completed_a_comm_assessment_id__c</fullName>
        <label>Orgs that completed a comm assessment id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orgs_w_3_effective_vol_mgmt_practices__c</fullName>
        <label>Orgs w/ 3+ effective vol. mgmt practices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Special_Needs_IN__c</fullName>
        <label>Other Special Needs(IN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Special_Needs_NIH__c</fullName>
        <label>Other Special Needs(NIH)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Special_Needs_V__c</fullName>
        <label>Other Special Needs(V)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_number__c</fullName>
        <label>Phone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Physical_Disabilities_I_N__c</fullName>
        <label>Physical Disabilities(IN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Disabilities_NIH__c</fullName>
        <label>Physical Disabilities(NIH)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Disabilities_V__c</fullName>
        <label>Physical Disabilities(V)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Poor_performance__c</fullName>
        <label>Poor performance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Amounts_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previous Amounts Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Director__c</fullName>
        <label>Program Director</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Program_income_expended_in_accordance_w__c</fullName>
        <label>Program income expended in accordance wi</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_income_expended_in_accordance_wi__c</fullName>
        <label>Program income expended in accordance wi</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Award__r.Project_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiving_Disaster_Services__c</fullName>
        <label>Receiving Disaster Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receiving_Economic_Opportunity_Services__c</fullName>
        <label>Receiving Economic Opportunity Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>